# youtube_highlight_generator_api

./: README.md  main.py  notes.txt  pyproject.toml
youtube_clip_finder/: config.py  get_data.py  main.py  with_langchain.py
